	PR ld/13839 	* ldexp.c (fold_name): Ignore undefined symbols when assigning to 	dot in mark phase. 	(exp_fold_tree_1): Evaluate assignment to dot expressions even when 	discarding result, for side effects.  Fix typo in error message.